fix item row overflowing height

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -111,7 +111,6 @@ select {
 .container {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
     gap: 10px;
 }
 
